= 1.2.4 = * Introducing module class/rev some class * Fix "nowrap" in UI * Fix string length in comment/span preview * Fix undefined function in Wordpress 2.9 previous version
git-svn-id: https://plugins.svn.wordpress.org/wp-cleanfix/trunk@237247 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/style.uncompressed.css
+++ b/css/style.uncompressed.css
@@ -47,6 +47,10 @@ table.wp-cleanfix tbody td {
     white-space: nowrap;
 }
 
+table.wp-cleanfix tbody td:last-child {
+    white-space: normal;
+}
+
 .wp-cleanfix button {
     background-image: url(images/clean.png);
     background-repeat: no-repeat;
@@ -57,6 +61,7 @@ table.wp-cleanfix tbody td {
     text-shadow:1px 1px 1px #fff;
     -moz-border-radius: 16px;
     -webkit-border-radius: 16px;
+	border-radius: 16px;
 }
 
 tr.tools {
